<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--按“Ctrl + Shift+/”可以给将代码块注释在“/*”和“*/”中。
   再次按“Ctrl + Shift+/”可以取消注释。-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    //图片
    <ImageView
        android:id="@+id/icon"
        android:layout_width="104dp"
        android:layout_height="104dp"
        app:srcCompat="@drawable/old"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    //手机号输入框
    <TextView
        android:id="@+id/user_id"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="50dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/user_pwd"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id" />

    <EditText
        android:id="@+id/text_userid"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:hint="请输入手机号"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/user_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_id"
        app:layout_constraintTop_toTopOf="@id/user_id" />

    <EditText
        android:id="@+id/text_userpwd"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="20dp"
        android:hint="请输入密码"
        android:paddingTop="0dp"
        android:password="true"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintLeft_toRightOf="@+id/user_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_pwd" />


    //单选按钮，判断是老人还是子女
    <RadioGroup
        android:id="@+id/radioButton"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pwd"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/old"
            android:text="@string/old"
            android:textColor="#000000"
            android:textSize="18sp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/son"
            android:text="@string/son_daught"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>



    <View
        android:id="@+id/button_box"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton" />

    // android:onClick="main_skip_oldpage"
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:onClick="main_skip_oldpage"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        tools:ignore="OnClick"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:onClick="main_skip_registero"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        tools:ignore="OnClick" />


</android.support.constraint.ConstraintLayout>