<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    //本页面的标题：注册页
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //用户的唯一标识:手机号

    <TextView
        android:id="@+id/user_id"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="215dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    //老人注册是时候，要求输入名字，防止子女添加老人手机号时，输错（预防方案）
    <TextView
        android:id="@+id/username"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="152dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/user_pwd"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id" />


    <EditText
        android:id="@+id/text_username"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:hint="请输入姓名"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="@id/username" />

    <EditText
        android:id="@+id/text_userid"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:hint="请输入手机号"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/user_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_id"
        app:layout_constraintTop_toTopOf="@id/user_id" />


    <EditText
        android:id="@+id/text_userpwd"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="20dp"
        android:hint="请输入密码"
        android:paddingTop="0dp"
        android:password="true"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/user_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_pwd" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="112dp"
        android:text="@string/register_sure"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id" />



</android.support.constraint.ConstraintLayout>