<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suser_id"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="130dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/suser_pwd"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="116dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suser_id" />

    <TextView
        android:id="@+id/sure_pwd"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp"
        android:text="确认密码："
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suser_pwd" />


    <EditText
        android:id="@+id/stext_userid"
        android:layout_width="173dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:maxLength="11"
        android:hint="请输入11位手机号"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/suser_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suser_id"
        app:layout_constraintTop_toTopOf="@id/suser_id" />


    <EditText
        android:id="@+id/stext_userpwd"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="40dp"
        android:hint="请输入密码"
        android:paddingTop="0dp"
        android:password="true"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toRightOf="@+id/suser_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/suser_pwd" />

    <EditText
        android:id="@+id/sstext_userpwd"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="40dp"
        android:hint="再次输入密码"
        android:paddingTop="0dp"
        android:password="true"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintLeft_toRightOf="@+id/suser_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/suser_pwd" />


    <Button
        android:id="@+id/sureregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="124dp"
        android:onClick="register_skip_mian"
        android:text="@string/register_sure"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stext_userpwd"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/stext_sure"
        android:layout_width="144dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:digits="0123456789"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sure"
        app:layout_constraintTop_toBottomOf="@+id/stext_userid" />

    <Button
        android:id="@+id/sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="register_sure"
        android:text="验证"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stext_userid"
        tools:ignore="OnClick" />



</android.support.constraint.ConstraintLayout>