<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:text="请输入老人的信息"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/old_phone"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_name" />

    //老人注册是时候，要求输入名字，防止子女添加老人手机号时，输错（预防方案）

    <TextView
        android:id="@+id/old_name"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="180dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/old_password"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="288dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/text_oldname"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="30dp"
        android:digits="0123456789"
        android:hint="请输入姓名"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/old_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/old_name"
        app:layout_constraintTop_toTopOf="@id/old_name" />

    <EditText
        android:id="@+id/text_oldphone"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:hint="请输入手机号"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/old_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/old_phone"
        app:layout_constraintTop_toTopOf="@id/old_phone" />

    <EditText
        android:id="@+id/text_oldpassword"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        android:hint="请输入密码"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/old_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/old_password"
        app:layout_constraintTop_toTopOf="@id/old_password" />

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="确认绑定"
        android:onClick="bind_skip_sonhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick"/>



</android.support.constraint.ConstraintLayout>